--- a/10/Compiler/src/TestFiles/VMWriterTests/SimpleExpression_output.vm
+++ b/10/Compiler/src/TestFiles/VMWriterTests/SimpleExpression_output.vm
@@ -1,9 +1,21 @@
+<let statement>
 push constant 1
 push constant 2
 add
+pop local 0
+<let statement>
 push constant 3
+push local 0
+call Math.multiply 2
+push constant 1
 sub
+push local 0
 push constant 4
-null
-push constant 5
-null
+sub
+add
+pop local 1
+<let statement>
+push local 0
+push local 1
+call Math.divide 2
+pop local 2
