--- a/10/Compiler/src/TestFiles/VMWriterTests/SimpleExpression_output.vm
+++ b/10/Compiler/src/TestFiles/VMWriterTests/SimpleExpression_output.vm
@@ -4,6 +4,7 @@ push constant 2
 add
 pop local 0
 <let statement>
+push constant 5
 push constant 3
 push local 0
 call Math.multiply 2
@@ -12,6 +13,7 @@ sub
 push local 0
 push constant 4
 sub
+add
 add
 pop local 1
 <let statement>
