--- a/10/Compiler/src/TestFiles/ComplexExpression/Main.vm
+++ b/10/Compiler/src/TestFiles/ComplexExpression/Main.vm
@@ -19,6 +19,53 @@ sub
 call Math.divide 2
 pop local 0
 // do statement
+push constant 12
+call String.new 1
+push constant 69
+call String.appendChar 2
+push constant 120
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 53
+call String.appendChar 2
+push constant 54
+call String.appendChar 2
+call Output.printString 1
+push temp 0
+// do statement
+call Output.println 0
+push temp 0
+// do statement
+push constant 5
+call String.new 1
+push constant 71
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+push temp 0
+// do statement
 push local 0
 call Output.printInt 1
 push temp 0
