--- a/10/Compiler/src/TestFiles/Pong/Bat.vm
+++ b/10/Compiler/src/TestFiles/Pong/Bat.vm
@@ -2,71 +2,55 @@ function Bat.new 0
 push constant 5
 call Memory.alloc 1
 pop pointer 0
-// let statement
 push argument 0
 pop this 0
-// let statement
 push argument 1
 pop this 1
-// let statement
 push argument 2
 pop this 2
-// let statement
 push argument 3
 pop this 3
-// let statement
 push constant 2
 pop this 4
-// do statement
 push pointer 0
 call Bat.show 1
-push temp 0
-// return statement
+pop temp 0
 push pointer 0
 return
 function Bat.dispose 0
 push argument 0
 pop pointer 0
-// do statement
 push pointer 0
 call Memory.deAlloc 1
-push temp 0
-// return statement
+pop temp 0
 push constant 0
 return
 function Bat.show 0
 push argument 0
 pop pointer 0
-// do statement
 push constant 1
 neg
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push pointer 0
 call Bat.draw 1
-push temp 0
-// return statement
+pop temp 0
 push constant 0
 return
 function Bat.hide 0
 push argument 0
 pop pointer 0
-// do statement
 push constant 0
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push pointer 0
 call Bat.draw 1
-push temp 0
-// return statement
+pop temp 0
 push constant 0
 return
 function Bat.draw 0
 push argument 0
 pop pointer 0
-// do statement
 push this 0
 push this 1
 push this 0
@@ -76,29 +60,24 @@ push this 1
 push this 3
 add
 call Screen.drawRectangle 4
-push temp 0
-// return statement
+pop temp 0
 push constant 0
 return
 function Bat.setDirection 0
 push argument 0
 pop pointer 0
-// let statement
 push argument 1
 pop this 4
-// return statement
 push constant 0
 return
 function Bat.getLeft 0
 push argument 0
 pop pointer 0
-// return statement
 push this 0
 return
 function Bat.getRight 0
 push argument 0
 pop pointer 0
-// return statement
 push this 0
 push this 2
 add
@@ -106,41 +85,33 @@ return
 function Bat.setWidth 0
 push argument 0
 pop pointer 0
-// do statement
 push pointer 0
 call Bat.hide 1
-push temp 0
-// let statement
+pop temp 0
 push argument 1
 pop this 2
-// do statement
 push pointer 0
 call Bat.show 1
-push temp 0
-// return statement
+pop temp 0
 push constant 0
 return
 function Bat.move 0
 push argument 0
 pop pointer 0
-// if statement
 push this 4
 push constant 1
 eq
 not
 if-goto L0
-// let statement
 push this 0
 push constant 4
 sub
 pop this 0
-// if statement
 push this 0
 push constant 0
-gt
+lt
 not
 if-goto L2
-// let statement
 push constant 0
 pop this 0
 goto L3
@@ -148,11 +119,9 @@ label L2
 push constant 0
 pop temp 0
 label L3
-// do statement
 push constant 0
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push this 0
 push this 2
 add
@@ -168,13 +137,11 @@ push this 1
 push this 3
 add
 call Screen.drawRectangle 4
-push temp 0
-// do statement
+pop temp 0
 push constant 1
 neg
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push this 0
 push this 1
 push this 0
@@ -184,23 +151,20 @@ push this 1
 push this 3
 add
 call Screen.drawRectangle 4
-push temp 0
+pop temp 0
 goto L1
 label L0
-// let statement
 push this 0
 push constant 4
 add
 pop this 0
-// if statement
 push this 0
 push this 2
 add
 push constant 511
-lt
+gt
 not
 if-goto L4
-// let statement
 push constant 511
 push this 2
 sub
@@ -210,11 +174,9 @@ label L4
 push constant 0
 pop temp 0
 label L5
-// do statement
 push constant 0
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push this 0
 push constant 4
 sub
@@ -226,13 +188,11 @@ push this 1
 push this 3
 add
 call Screen.drawRectangle 4
-push temp 0
-// do statement
+pop temp 0
 push constant 1
 neg
 call Screen.setColor 1
-push temp 0
-// do statement
+pop temp 0
 push this 0
 push this 2
 add
@@ -246,10 +206,9 @@ push this 1
 push this 3
 add
 call Screen.drawRectangle 4
-push temp 0
+pop temp 0
 push constant 0
 pop temp 0
 label L1
-// return statement
 push constant 0
 return
